SDIT-1384 StaffResource, Apply role annotations